--- a/src/assets/projects/desktop.ini
+++ b/src/assets/projects/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2025-09-19 213817.png=@Screenshot 2025-09-19 213817,0
+Screenshot 2025-09-20 182601.png=@Screenshot 2025-09-20 182601,0
